// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageInput Styles should render with a custom component 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-1 {
  display: inline-block;
  position: relative;
  text-align: center;
}

.circuit-2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-2:focus+label>*:last-child {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-2:focus+label>*:last-child::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus:not(:focus-visible)+label>*:last-child {
  box-shadow: none;
}

.circuit-3 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
  cursor: pointer;
}

.circuit-3::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0%;
  width: 100%;
  height: 100%;
  border-radius: 12px;
  pointer-events: none;
  background-color: #000;
  opacity: 0;
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
}

.circuit-3>*:last-child {
  -webkit-transition: box-shadow 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out;
}

@supports (-webkit-filter: brightness(1)) or (filter: brightness(1)) {
  .circuit-3 {
    -webkit-transition: filter 120ms ease-in-out;
    transition: filter 120ms ease-in-out;
  }

  .circuit-3::before {
    content: none;
  }
}

.circuit-3:hover::before {
  opacity: 0.1;
}

.circuit-3:active::before {
  opacity: 0.2;
}

@supports (-webkit-filter: brightness(1)) or (filter: brightness(1)) {
  .circuit-3:hover {
    -webkit-filter: brightness(0.9);
    filter: brightness(0.9);
  }

  .circuit-3:active {
    -webkit-filter: brightness(0.8);
    filter: brightness(0.8);
  }
}

.circuit-3:hover>button {
  background-color: #234BC3;
  border-color: #234BC3;
}

.circuit-3:active>button {
  background-color: #1A368E;
  border-color: #1A368E;
}

.circuit-4 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #DE331D;
  border-color: #DE331D;
  color: #FFF;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
  padding: calc(8px - 1px);
  position: absolute;
  right: -4px;
  bottom: -4px;
}

.circuit-5:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-5:focus::-moz-focus-inner {
  border: 0;
}

.circuit-5:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-5:hover {
  background-color: #B22426;
  border-color: #B22426;
}

.circuit-5:active,
.circuit-5[aria-expanded='true'],
.circuit-5[aria-pressed='true'] {
  background-color: #941618;
  border-color: #941618;
}

.circuit-6 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-7 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-10 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 32px;
  height: 32px;
  position: absolute;
  width: 32px;
  height: 32px;
  top: calc(50% - 16px);
  left: calc(50% - 16px);
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  color: #FFF;
  pointer-events: none;
}

<div>
  <div
    class="circuit-0"
  >
    <div
      class="circuit-1"
    >
      <input
        accept="image/*"
        aria-describedby="validation-hint_10"
        aria-invalid="false"
        class="circuit-2"
        id="image-input_9"
        type="file"
      />
      <label
        class="circuit-3"
        for="image-input_9"
      >
        <span
          class="circuit-4"
        >
          Upload an image
        </span>
        <img
          alt=""
          src="/images/illustration-coffee.jpg"
          style="width: 400px; height: 100px;"
        />
      </label>
      <button
        class="circuit-5"
        title="Clear"
        type="button"
      >
        <span
          class="circuit-6"
        >
          <span
            class="circuit-7"
          />
        </span>
        <span
          class="circuit-8"
        >
          <svg
            fill="none"
            height="16"
            role="presentation"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 0a1 1 0 0 0 0 2h8a1 1 0 1 0 0-2H4z"
              fill="currentColor"
            />
            <path
              clip-rule="evenodd"
              d="M1 4a1 1 0 0 0 0 2h1v7a3 3 0 0 0 3 3h6a3 3 0 0 0 3-3V6h1a1 1 0 1 0 0-2H1zm5 3a1 1 0 0 0-1 1v4a1 1 0 1 0 2 0V8a1 1 0 0 0-1-1zm4 0a1 1 0 0 0-1 1v4a1 1 0 1 0 2 0V8a1 1 0 0 0-1-1z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="circuit-7"
          >
            Clear
          </span>
        </span>
      </button>
      <span
        class="circuit-10"
      >
        <span
          class="circuit-7"
        >
          Uploading
        </span>
      </span>
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`ImageInput Styles should render with a giga button 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-1 {
  display: inline-block;
  position: relative;
  text-align: center;
}

.circuit-2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-2:focus+label>*:last-child {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-2:focus+label>*:last-child::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus:not(:focus-visible)+label>*:last-child {
  box-shadow: none;
}

.circuit-3 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
  cursor: pointer;
}

.circuit-3::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0%;
  width: 100%;
  height: 100%;
  border-radius: 12px;
  pointer-events: none;
  background-color: #000;
  opacity: 0;
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
}

.circuit-3>*:last-child {
  -webkit-transition: box-shadow 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out;
}

@supports (-webkit-filter: brightness(1)) or (filter: brightness(1)) {
  .circuit-3 {
    -webkit-transition: filter 120ms ease-in-out;
    transition: filter 120ms ease-in-out;
  }

  .circuit-3::before {
    content: none;
  }
}

.circuit-3:hover::before {
  opacity: 0.1;
}

.circuit-3:active::before {
  opacity: 0.2;
}

@supports (-webkit-filter: brightness(1)) or (filter: brightness(1)) {
  .circuit-3:hover {
    -webkit-filter: brightness(0.9);
    filter: brightness(0.9);
  }

  .circuit-3:active {
    -webkit-filter: brightness(0.8);
    filter: brightness(0.8);
  }
}

.circuit-3:hover>button {
  background-color: #234BC3;
  border-color: #234BC3;
}

.circuit-3:active>button {
  background-color: #1A368E;
  border-color: #1A368E;
}

.circuit-4 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-5 {
  width: 96px;
  height: 96px;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  background-color: #CCC;
  border-radius: 12px;
  display: block;
  object-fit: cover;
  object-position: center;
}

.circuit-6 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #3063E9;
  border-color: #3063E9;
  color: #FFF;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
  padding: calc(8px - 1px);
  position: absolute;
  right: -4px;
  bottom: -4px;
  padding: 5px;
  pointer-events: none;
}

.circuit-6:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-6:focus::-moz-focus-inner {
  border: 0;
}

.circuit-6:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-6:disabled,
.circuit-6[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-6:hover {
  background-color: #234BC3;
  border-color: #234BC3;
}

.circuit-6:active,
.circuit-6[aria-expanded='true'],
.circuit-6[aria-pressed='true'] {
  background-color: #1A368E;
  border-color: #1A368E;
}

.circuit-6 svg {
  width: 14px;
  height: 14px;
}

.circuit-7 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-8 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-11 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 32px;
  height: 32px;
  position: absolute;
  width: 32px;
  height: 32px;
  top: calc(50% - 16px);
  left: calc(50% - 16px);
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  color: #FFF;
  pointer-events: none;
}

<div>
  <div
    class="circuit-0"
  >
    <div
      class="circuit-1"
    >
      <input
        accept="image/*"
        aria-describedby="validation-hint_8"
        aria-invalid="false"
        class="circuit-2"
        id="image-input_7"
        type="file"
      />
      <label
        class="circuit-3"
        for="image-input_7"
      >
        <span
          class="circuit-4"
        >
          Upload an image
        </span>
        <img
          alt=""
          class="circuit-5"
          src="data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 96 96"><path fill="white" d="M30 25c0-4.9706 4.0294-9 9-9s9 4.0294 9 9-4.0294 9-9 9-9-4.0294-9-9zM41.1571 60.5691L30.6742 48.3905c-1.6438-1.9097-4.6225-1.8422-6.1782.1399L8 69.5483v12.4515c0 3.3137 2.6863 6 6 6h5.9592l21.1979-27.4307zM70.4856 32.878c1.5553-2.002 4.5569-2.0705 6.202-.1417l11.312 13.2623v36c0 3.3137-2.6863 6-6 6H27.6611L70.4856 32.878z"/></svg>"
        />
      </label>
      <button
        aria-hidden="true"
        class="circuit-6"
        tabindex="-1"
        title="-"
        type="button"
      >
        <span
          class="circuit-7"
        >
          <span
            class="circuit-8"
          />
        </span>
        <span
          class="circuit-9"
        >
          <svg
            fill="none"
            height="16"
            role="presentation"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 8c0 .5-.4 1-1 1H9v5c0 .5-.4 1-1 1s-1-.5-1-1V9H2c-.5 0-1-.5-1-1s.5-1 1-1h5V2c0-.5.4-1 1-1s1 .5 1 1v5h5c.6 0 1 .5 1 1z"
              fill="currentColor"
            />
          </svg>
          <span
            class="circuit-8"
          >
            -
          </span>
        </span>
      </button>
      <span
        class="circuit-11"
      >
        <span
          class="circuit-8"
        >
          Uploading
        </span>
      </span>
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`ImageInput Styles should render with an existing image 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-1 {
  display: inline-block;
  position: relative;
  text-align: center;
}

.circuit-2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-2:focus+label>*:last-child {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-2:focus+label>*:last-child::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus:not(:focus-visible)+label>*:last-child {
  box-shadow: none;
}

.circuit-3 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
  cursor: pointer;
}

.circuit-3::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0%;
  width: 100%;
  height: 100%;
  border-radius: 12px;
  pointer-events: none;
  background-color: #000;
  opacity: 0;
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
}

.circuit-3>*:last-child {
  -webkit-transition: box-shadow 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out;
}

@supports (-webkit-filter: brightness(1)) or (filter: brightness(1)) {
  .circuit-3 {
    -webkit-transition: filter 120ms ease-in-out;
    transition: filter 120ms ease-in-out;
  }

  .circuit-3::before {
    content: none;
  }
}

.circuit-3:hover::before {
  opacity: 0.1;
}

.circuit-3:active::before {
  opacity: 0.2;
}

@supports (-webkit-filter: brightness(1)) or (filter: brightness(1)) {
  .circuit-3:hover {
    -webkit-filter: brightness(0.9);
    filter: brightness(0.9);
  }

  .circuit-3:active {
    -webkit-filter: brightness(0.8);
    filter: brightness(0.8);
  }
}

.circuit-3:hover>button {
  background-color: #234BC3;
  border-color: #234BC3;
}

.circuit-3:active>button {
  background-color: #1A368E;
  border-color: #1A368E;
}

.circuit-4 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-5 {
  width: 96px;
  height: 96px;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  background-color: #CCC;
  border-radius: 12px;
  display: block;
  object-fit: cover;
  object-position: center;
}

.circuit-6 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #DE331D;
  border-color: #DE331D;
  color: #FFF;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
  padding: calc(8px - 1px);
  position: absolute;
  right: -4px;
  bottom: -4px;
}

.circuit-6:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-6:focus::-moz-focus-inner {
  border: 0;
}

.circuit-6:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-6:disabled,
.circuit-6[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-6:hover {
  background-color: #B22426;
  border-color: #B22426;
}

.circuit-6:active,
.circuit-6[aria-expanded='true'],
.circuit-6[aria-pressed='true'] {
  background-color: #941618;
  border-color: #941618;
}

.circuit-7 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-8 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-11 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 32px;
  height: 32px;
  position: absolute;
  width: 32px;
  height: 32px;
  top: calc(50% - 16px);
  left: calc(50% - 16px);
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  color: #FFF;
  pointer-events: none;
}

<div>
  <div
    class="circuit-0"
  >
    <div
      class="circuit-1"
    >
      <input
        accept="image/*"
        aria-describedby="validation-hint_4"
        aria-invalid="false"
        class="circuit-2"
        id="image-input_3"
        type="file"
      />
      <label
        class="circuit-3"
        for="image-input_3"
      >
        <span
          class="circuit-4"
        >
          Upload an image
        </span>
        <img
          alt=""
          class="circuit-5"
          src="/images/illustration-coffee.jpg"
        />
      </label>
      <button
        class="circuit-6"
        title="Clear"
        type="button"
      >
        <span
          class="circuit-7"
        >
          <span
            class="circuit-8"
          />
        </span>
        <span
          class="circuit-9"
        >
          <svg
            fill="none"
            height="16"
            role="presentation"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 0a1 1 0 0 0 0 2h8a1 1 0 1 0 0-2H4z"
              fill="currentColor"
            />
            <path
              clip-rule="evenodd"
              d="M1 4a1 1 0 0 0 0 2h1v7a3 3 0 0 0 3 3h6a3 3 0 0 0 3-3V6h1a1 1 0 1 0 0-2H1zm5 3a1 1 0 0 0-1 1v4a1 1 0 1 0 2 0V8a1 1 0 0 0-1-1zm4 0a1 1 0 0 0-1 1v4a1 1 0 1 0 2 0V8a1 1 0 0 0-1-1z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="circuit-8"
          >
            Clear
          </span>
        </span>
      </button>
      <span
        class="circuit-11"
      >
        <span
          class="circuit-8"
        >
          Uploading
        </span>
      </span>
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`ImageInput Styles should render with default styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-1 {
  display: inline-block;
  position: relative;
  text-align: center;
}

.circuit-2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-2:focus+label>*:last-child {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-2:focus+label>*:last-child::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus:not(:focus-visible)+label>*:last-child {
  box-shadow: none;
}

.circuit-3 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
  cursor: pointer;
}

.circuit-3::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0%;
  width: 100%;
  height: 100%;
  border-radius: 12px;
  pointer-events: none;
  background-color: #000;
  opacity: 0;
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
}

.circuit-3>*:last-child {
  -webkit-transition: box-shadow 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out;
}

@supports (-webkit-filter: brightness(1)) or (filter: brightness(1)) {
  .circuit-3 {
    -webkit-transition: filter 120ms ease-in-out;
    transition: filter 120ms ease-in-out;
  }

  .circuit-3::before {
    content: none;
  }
}

.circuit-3:hover::before {
  opacity: 0.1;
}

.circuit-3:active::before {
  opacity: 0.2;
}

@supports (-webkit-filter: brightness(1)) or (filter: brightness(1)) {
  .circuit-3:hover {
    -webkit-filter: brightness(0.9);
    filter: brightness(0.9);
  }

  .circuit-3:active {
    -webkit-filter: brightness(0.8);
    filter: brightness(0.8);
  }
}

.circuit-3:hover>button {
  background-color: #234BC3;
  border-color: #234BC3;
}

.circuit-3:active>button {
  background-color: #1A368E;
  border-color: #1A368E;
}

.circuit-4 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-5 {
  width: 96px;
  height: 96px;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  background-color: #CCC;
  border-radius: 12px;
  display: block;
  object-fit: cover;
  object-position: center;
}

.circuit-6 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #3063E9;
  border-color: #3063E9;
  color: #FFF;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
  padding: calc(8px - 1px);
  position: absolute;
  right: -4px;
  bottom: -4px;
  pointer-events: none;
}

.circuit-6:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-6:focus::-moz-focus-inner {
  border: 0;
}

.circuit-6:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-6:disabled,
.circuit-6[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-6:hover {
  background-color: #234BC3;
  border-color: #234BC3;
}

.circuit-6:active,
.circuit-6[aria-expanded='true'],
.circuit-6[aria-pressed='true'] {
  background-color: #1A368E;
  border-color: #1A368E;
}

.circuit-7 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-8 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-11 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 32px;
  height: 32px;
  position: absolute;
  width: 32px;
  height: 32px;
  top: calc(50% - 16px);
  left: calc(50% - 16px);
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  color: #FFF;
  pointer-events: none;
}

<div>
  <div
    class="circuit-0"
  >
    <div
      class="circuit-1"
    >
      <input
        accept="image/*"
        aria-describedby="validation-hint_2"
        aria-invalid="false"
        class="circuit-2"
        id="image-input_1"
        type="file"
      />
      <label
        class="circuit-3"
        for="image-input_1"
      >
        <span
          class="circuit-4"
        >
          Upload an image
        </span>
        <img
          alt=""
          class="circuit-5"
          src="data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 96 96"><path fill="white" d="M30 25c0-4.9706 4.0294-9 9-9s9 4.0294 9 9-4.0294 9-9 9-9-4.0294-9-9zM41.1571 60.5691L30.6742 48.3905c-1.6438-1.9097-4.6225-1.8422-6.1782.1399L8 69.5483v12.4515c0 3.3137 2.6863 6 6 6h5.9592l21.1979-27.4307zM70.4856 32.878c1.5553-2.002 4.5569-2.0705 6.202-.1417l11.312 13.2623v36c0 3.3137-2.6863 6-6 6H27.6611L70.4856 32.878z"/></svg>"
        />
      </label>
      <button
        aria-hidden="true"
        class="circuit-6"
        tabindex="-1"
        title="-"
        type="button"
      >
        <span
          class="circuit-7"
        >
          <span
            class="circuit-8"
          />
        </span>
        <span
          class="circuit-9"
        >
          <svg
            fill="none"
            height="16"
            role="presentation"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 8c0 .5-.4 1-1 1H9v5c0 .5-.4 1-1 1s-1-.5-1-1V9H2c-.5 0-1-.5-1-1s.5-1 1-1h5V2c0-.5.4-1 1-1s1 .5 1 1v5h5c.6 0 1 .5 1 1z"
              fill="currentColor"
            />
          </svg>
          <span
            class="circuit-8"
          >
            -
          </span>
        </span>
      </button>
      <span
        class="circuit-11"
      >
        <span
          class="circuit-8"
        >
          Uploading
        </span>
      </span>
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`ImageInput Styles should render with invalid styles and an error message 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-1 {
  display: inline-block;
  position: relative;
  text-align: center;
}

.circuit-2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-2:focus+label>*:last-child {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-2:focus+label>*:last-child::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus:not(:focus-visible)+label>*:last-child {
  box-shadow: none;
}

.circuit-3 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
  cursor: pointer;
}

.circuit-3::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0%;
  width: 100%;
  height: 100%;
  border-radius: 12px;
  pointer-events: none;
  background-color: #000;
  opacity: 0;
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
}

.circuit-3>*:last-child {
  -webkit-transition: box-shadow 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out;
}

@supports (-webkit-filter: brightness(1)) or (filter: brightness(1)) {
  .circuit-3 {
    -webkit-transition: filter 120ms ease-in-out;
    transition: filter 120ms ease-in-out;
  }

  .circuit-3::before {
    content: none;
  }
}

.circuit-3>*:last-child {
  box-shadow: 0 0 0 2px #DE331D;
}

.circuit-3:hover>*:last-child {
  box-shadow: 0 0 0 2px #B22426;
}

.circuit-3:hover::before {
  opacity: 0.1;
}

.circuit-3:active::before {
  opacity: 0.2;
}

@supports (-webkit-filter: brightness(1)) or (filter: brightness(1)) {
  .circuit-3:hover {
    -webkit-filter: brightness(0.9);
    filter: brightness(0.9);
  }

  .circuit-3:active {
    -webkit-filter: brightness(0.8);
    filter: brightness(0.8);
  }
}

.circuit-3:hover>button {
  background-color: #234BC3;
  border-color: #234BC3;
}

.circuit-3:active>button {
  background-color: #1A368E;
  border-color: #1A368E;
}

.circuit-4 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-5 {
  width: 96px;
  height: 96px;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  background-color: #CCC;
  border-radius: 12px;
  display: block;
  object-fit: cover;
  object-position: center;
}

.circuit-6 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #3063E9;
  border-color: #3063E9;
  color: #FFF;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
  padding: calc(8px - 1px);
  position: absolute;
  right: -4px;
  bottom: -4px;
  pointer-events: none;
}

.circuit-6:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-6:focus::-moz-focus-inner {
  border: 0;
}

.circuit-6:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-6:disabled,
.circuit-6[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-6:hover {
  background-color: #234BC3;
  border-color: #234BC3;
}

.circuit-6:active,
.circuit-6[aria-expanded='true'],
.circuit-6[aria-pressed='true'] {
  background-color: #1A368E;
  border-color: #1A368E;
}

.circuit-7 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-8 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-11 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 32px;
  height: 32px;
  position: absolute;
  width: 32px;
  height: 32px;
  top: calc(50% - 16px);
  left: calc(50% - 16px);
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  color: #FFF;
  pointer-events: none;
}

.circuit-13 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  display: block;
  margin-top: 4px;
  color: #666;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
  color: #DE331D;
}

.circuit-14 {
  display: inline-block;
  position: relative;
  width: 16px;
  height: 16px;
  vertical-align: text-top;
  margin-right: 4px;
  color: #DE331D;
}

<div>
  <div
    class="circuit-0"
  >
    <div
      class="circuit-1"
    >
      <input
        accept="image/*"
        aria-describedby="validation-hint_6"
        aria-invalid="true"
        class="circuit-2"
        id="image-input_5"
        type="file"
      />
      <label
        class="circuit-3"
        for="image-input_5"
      >
        <span
          class="circuit-4"
        >
          Upload an image
        </span>
        <img
          alt=""
          class="circuit-5"
          src="data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 96 96"><path fill="white" d="M30 25c0-4.9706 4.0294-9 9-9s9 4.0294 9 9-4.0294 9-9 9-9-4.0294-9-9zM41.1571 60.5691L30.6742 48.3905c-1.6438-1.9097-4.6225-1.8422-6.1782.1399L8 69.5483v12.4515c0 3.3137 2.6863 6 6 6h5.9592l21.1979-27.4307zM70.4856 32.878c1.5553-2.002 4.5569-2.0705 6.202-.1417l11.312 13.2623v36c0 3.3137-2.6863 6-6 6H27.6611L70.4856 32.878z"/></svg>"
        />
      </label>
      <button
        aria-hidden="true"
        class="circuit-6"
        tabindex="-1"
        title="-"
        type="button"
      >
        <span
          class="circuit-7"
        >
          <span
            class="circuit-8"
          />
        </span>
        <span
          class="circuit-9"
        >
          <svg
            fill="none"
            height="16"
            role="presentation"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 8c0 .5-.4 1-1 1H9v5c0 .5-.4 1-1 1s-1-.5-1-1V9H2c-.5 0-1-.5-1-1s.5-1 1-1h5V2c0-.5.4-1 1-1s1 .5 1 1v5h5c.6 0 1 .5 1 1z"
              fill="currentColor"
            />
          </svg>
          <span
            class="circuit-8"
          >
            -
          </span>
        </span>
      </button>
      <span
        class="circuit-11"
      >
        <span
          class="circuit-8"
        >
          Uploading
        </span>
      </span>
    </div>
    <span
      aria-live="polite"
      role="status"
    >
      <span
        class="circuit-13"
        id="validation-hint_6"
      >
        <div
          class="circuit-14"
        >
          <svg
            fill="none"
            height="16"
            role="presentation"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3 11a1 1 0 0 1-1.41 0L8 9.41 6.41 11A1 1 0 0 1 5 9.59L6.59 8 5 6.41A1 1 0 0 1 5 5a1 1 0 0 1 1.41 0L8 6.59 9.59 5A1 1 0 0 1 11 5a1 1 0 0 1 0 1.41L9.41 8 11 9.59A1 1 0 0 1 11 11z"
              fill="currentColor"
            />
          </svg>
        </div>
        The uploaded image exceeds the maximum allowed size. Please use an image with a size below 20MB.
      </span>
    </span>
  </div>
</div>
`;
